--- a/package.json
+++ b/package.json
@@ -11,9 +11,37 @@
   "dependencies": {
     "@aptos-labs/wallet-adapter-ant-design": "^3.0.2",
     "@aptos-labs/wallet-adapter-react": "^3.5.2",
+    "@chain-registry/types": "0.17.1",
+    "@cosmjs/cosmwasm-stargate": "0.31.3",
+    "@cosmjs/launchpad": "^0.27.1",
+    "@cosmjs/proto-signing": "^0.32.4",
+    "@cosmjs/stargate": "0.32.3",
+    "@cosmjs/tendermint-rpc": "^0.32.4",
+    "@cosmos-kit/cdcwallet-extension": "^2.15.1",
+    "@cosmos-kit/coin98-extension": "^2.14.1",
+    "@cosmos-kit/compass-extension": "^2.13.1",
+    "@cosmos-kit/cosmostation-extension": "^2.15.0",
+    "@cosmos-kit/exodus-extension": "^2.12.0",
+    "@cosmos-kit/fin-extension": "^2.13.1",
+    "@cosmos-kit/frontier-extension": "^2.12.0",
+    "@cosmos-kit/galaxy-station-extension": "^2.13.0",
+    "@cosmos-kit/keplr-extension": "^2.14.0",
+    "@cosmos-kit/keplr-mobile": "^2.14.1",
+    "@cosmos-kit/leap-extension": "^2.14.1",
+    "@cosmos-kit/leap-metamask-cosmos-snap": "^0.14.1",
+    "@cosmos-kit/omni-mobile": "^2.12.0",
+    "@cosmos-kit/owallet-extension": "^2.14.1",
+    "@cosmos-kit/react": "2.17.0",
+    "@cosmos-kit/shell-extension": "^2.13.1",
+    "@cosmos-kit/station-extension": "^2.13.0",
+    "@cosmos-kit/trust-extension": "^2.12.0",
+    "@cosmos-kit/trust-mobile": "^2.12.0",
+    "@cosmos-kit/vectis-extension": "^2.13.1",
+    "@cosmos-kit/xdefi-extension": "^2.13.0",
     "@graphprotocol/graph-ts": "^0.33.0",
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
+    "@interchain-ui/react": "^1.25.6",
     "@mizuwallet-sdk/core": "^1.3.0",
     "@panoraexchange/widget-sdk": "^1.0.11",
     "@radix-ui/react-accordion": "^1.2.0",
@@ -25,9 +53,12 @@
     "@radix-ui/react-toast": "^1.2.1",
     "@react-three/drei": "^9.115.0",
     "@react-three/fiber": "^8.17.10",
+    "match-sorter": "^7.0.0",
     "aptos": "^1.21.0",
+    "chain-registry": "1.25.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cosmos-kit": "^2.21.1",
     "embla-carousel-react": "^8.2.0",
     "framer-motion": "^11.0.6",
     "graphql": "^16.8.1",
